--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -2,25 +2,25 @@ FROM ubuntu:22.04
 MAINTAINER expressliberate@gmail.com
 
 # Instalando dependencias
-RUN sudo apt update 
-RUN sudo apt dist-upgrade -y
-RUN sudo apt install -y wget build-essential subversion
+RUN apt-get update 
+RUN apt-get dist-upgrade -y
+RUN apt-get install -y wget build-essential subversion
 
 # Baixe o asterisk 18 e descompacte entre as pastas
 RUN wget http://downloads.asterisk.org/pub/telephony/asterisk/asterisk-18-current.tar.gz && tar zxf asterisk-18-current.tar.gz
 RUN cd asterisk-18*./
 
 # Suporte para arquivos MP3 no Asterisk, baixe as fontes para compilar os módulos mp3 do asterisk
-RUN sudo contrib/scripts/get_mp3_source.sh
+RUN contrib/scripts/get_mp3_source.sh
 
 # Instalando as dependencias para a compilação do asterisk
-RUN sudo contrib/scripts/install_prereq install
+RUN contrib/scripts/install_prereq install
 
 # Compilação do codigo fonte 
 
 # Configure o arquivo de instalação
 
-RUN sudo ./configure
+RUN ./configure
 RUN make -j$(nproc) menuselect.makeopts
 RUN menuselect/menuselect \
                           --disable BUILD_NATIVE \
@@ -31,19 +31,21 @@ RUN menuselect/menuselect \
                       menuselect.makeopts \
 
 # Conpile e instale o asterisk
-RUN sudo make
-RUN sudo make install
+RUN make
+RUN make install
 
 # Gerando os arquivos de configuração básicos e o script de inicialização do asterisk como um serviço do sistema
-RUN sudo make basic-pbx
-RUN sudo make config
+RUN make basic-pbx
+RUN make config
 
 # Inicialização do serviço asterisk no sistema
 # Inicie o servoço do asterisk e habilite-o para que seja inicializado junto com o sistema operacional
-RUN sudo systemctl start asterisk
-RUN sudo systemctl enable asterisk
+RUN systemctl start asterisk
+RUN systemctl enable asterisk
 
 # Iniciando o asterisk como usuário asterisk
 USER asterisk
 CMD /usr/sbin/asterisk -rvvvvv
+
+# Atenção, copie esse código, e cole num arquivo nano
 
